Add Cart with ajax

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -30,6 +30,11 @@ td {
 .margin {
   margin-left: 5px;
 }
+
+.size {
+  width: 50px;
+}
+
 /* display none until init */
 .owl-carousel{
   display: none;
