--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -44,13 +44,8 @@
             = "$#{@product.price}"
         /! Price Ends
         hr
-          .form-group
-            label.control-label.text-uppercase for="input-quantity"  Qty:
-            input#input-quantity.form-control name="quantity" size="2" type="text" value="1" /
           .cart-button.button-group
-            button.btn.btn-cart type="button" 
-              | Add to cart
-              i.fa.fa-shopping-cart
+            = button_to 'Add to cart', line_items_path(product_id: @product), class: 'btn btn-cart', remote: true
   /! Available Options Ends
   /! Right Ends
   /! Product Info Ends
@@ -132,9 +127,10 @@
             = " #{get_user_email_by_id(review.user_id)}"
             span.pull-right
               = review.created_at.localtime.strftime("%d/%m/%Y at %r")
-              - if current_user.has_role? :admin
-                = link_to ' ', product_review_path(@product, review), method: :delete,
-                        data: {confirm: 'Are you sure?'}, class: 'glyphicon glyphicon-remove'
+              - if current_user
+                - if current_user.has_role? :admin
+                  = link_to ' ', product_review_path(@product, review), method: :delete,
+                          data: {confirm: 'Are you sure?'}, class: 'glyphicon glyphicon-remove'
             pre
               = review.review
   /! Review Ends
@@ -158,7 +154,5 @@
                 span.price-new
                   = "$#{product.price}"
               .cart-button.button-group
-                button.btn.btn-cart type="button"
-                  i.fa.fa-shopping-cart
-                  | Add to cart
+                = button_to 'Add to cart', line_items_path(product_id: product), class: 'btn btn-cart', remote: true
         /! Product Ends
