--- a/app/views/carts/_cart_index.html.slim
+++ b/app/views/carts/_cart_index.html.slim
@@ -82,4 +82,4 @@
               = link_to root_path, class: 'btn btn-black pull-left' do
                 span.hidden-xs Continue Shopping
                 span.visible-xs Continue
-              = link_to 'Checkout', '', class: 'btn btn-main pull-right'
+              = link_to 'Checkout', new_order_path, class: 'btn btn-main pull-right'
