--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,13 +1,32 @@
 - provide(:title, 'Profile')
-h2
+
+h4
+  = link_to 'My Orders', orders_path
+h2.center
   | Profile
 = form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put}) do |f|
   - if resource.errors.any?
     .alert.alert-danger
       = devise_error_messages!
   .field.form-group
+    = f.label :first_name
+    = f.text_field :first_name, class: 'form-control'
+  .field.form-group
+    = f.label :last_name
+    = f.text_field :last_name, class: 'form-control'
+  .field.form-group
     = f.label :email
     = f.email_field :email, class: 'form-control'
+  .field.form-group
+    = f.label :phone_number
+    = f.text_field :phone_number, class: 'form-control'
+  .field.form-group
+    = f.label :city
+    = f.text_field :city, class: 'form-control'
+  .field.form-group
+    = f.label :address
+    = f.text_field :address, class: 'form-control'
+
   - if devise_mapping.confirmable? && resource.pending_reconfirmation?
     div
       | Currently waiting confirmation for:
@@ -25,12 +44,6 @@ h2
     = f.label :password_confirmation
     br
     = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'
-  .field.form-group
-    = f.label :current_password
-    i
-      | (we need your current password to confirm your changes)
-    br
-    = f.password_field :current_password, autocomplete: "off", class: 'form-control'
   .actions.form-group
     = f.submit "Update", class: 'btn btn-success'
 hr
